# funcpp

./: CMakeLists.txt  README.md  funcpp.h
examples/: ex1.cpp  prime.cpp
